--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@testing-library/preact": "^2.0.1",
     "@types/bn.js": "^4.11.6",
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.20",
