--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -3,7 +3,7 @@ tabWidth: 2
 useTabs: false
 semi: true
 singleQuote: false
-trailingComma: none
+trailingComma: all
 bracketSpacing: true
 bracketSameLine: false
 arrowParens: avoid
