--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: CI
 
-on:
-  [push, pull_request]
+on: [push, pull_request]
 
 jobs:
   lint-check:
@@ -37,21 +36,21 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
-        matrix:
-          node-version: [12.x, 14.x, 16.x]
+      matrix:
+        node-version: [12.x, 14.x, 16.x]
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-    - name: Use Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
-      with:
-        node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "yarn"
 
-    - name: Install NPM dependencies
-      run: yarn install
+      - name: Install NPM dependencies
+        run: yarn install
 
-    - name: Run Unit Tests
-      run: yarn test:unit
+      - name: Run Unit Tests
+        run: yarn test:unit
