--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/plugin-transform-react-jsx": "^7.17.3",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-typescript": "^7.16.7",
+    "@peculiar/webcrypto": "^1.3.3",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/preact": "^2.0.1",
     "@types/bn.js": "^4.11.6",
