--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "prettier . --write",
-    "prepublishOnly": "./scripts/prepublishOnly.sh"
+    "test": "./scripts/release.sh && cd build/npm"
   },
   "private": true,
   "dependencies": {
