--- a/examples/verify-webapp/package.json
+++ b/examples/verify-webapp/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "description": "Sample verify web app",
   "scripts": {
-    "dev:app": "cd ./a-profile-app && npm run dev",
-    "dev:wallet": "cd ./a-wallet && npm run dev",
-    "build:app": "cd ./a-profile-app && npm i",
-    "build:wallet": "cd ./a-wallet && npm i",
-    "dev": "concurrently --kill-others \"npm run dev:app\" \"npm run dev:wallet\""
+    "dev:app": "cd ./a-profile-app && yarn dev",
+    "dev:wallet": "cd ./a-wallet && yarn dev",
+    "build:app": "cd ./a-profile-app && yarn",
+    "build:wallet": "cd ./a-wallet && yarn",
+    "dev": "concurrently --kill-others \"yarn dev:app\" \"yarn dev:wallet\""
   },
   "repository": {
     "type": "git",
