Migrate from js-sha256 to sha.js

--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "eth-block-tracker": "4.4.3",
     "eth-json-rpc-filters": "4.2.2",
     "eth-rpc-errors": "4.0.2",
-    "js-sha256": "0.9.0",
     "json-rpc-engine": "6.1.0",
     "keccak": "^3.0.1",
     "preact": "^10.5.9",
     "qs": "^6.10.3",
     "rxjs": "^6.6.3",
+    "sha.js": "^2.4.11",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.4"
   },
@@ -72,6 +72,7 @@
     "@types/jest": "^27.4.1",
     "@types/node": "^14.14.20",
     "@types/qs": "^6.9.7",
+    "@types/sha.js": "^2.4.0",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
     "@typescript-eslint/eslint-plugin-tslint": "^5.7.0",
     "@typescript-eslint/parser": "^5.7.0",
