--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: cd into `wallet-sdk`
+        run: cd packages/wallet-sdk
+
       - name: Checkout node action
         uses: actions/setup-node@v3
         with:
@@ -42,6 +45,9 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
+      - name: cd into `wallet-sdk`
+        run: cd packages/wallet-sdk
 
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
