--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: cd into `wallet-sdk`
+        run: cd packages/wallet-sdk
+
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
