--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version-file: ".nvmrc"
+          cache-dependency-path: '**/yarn.lock'
 
       - name: Install NPM dependencies
         run: yarn install
