--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout node action
         uses: actions/setup-node@v3
         with:
-          node-version-file: ".nvmrc"
+          node-version-file: '**/.nvmrc'
           cache-dependency-path: '**/yarn.lock'
 
       - name: Install NPM dependencies
