--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version-file: ".nvmrc"
+          node-version-file: '**/.nvmrc'
           cache-dependency-path: '**/yarn.lock'
 
       - name: Update version
