Move web sdk sources under packages/wallet-sdk (#581)
* restructure

* license

* set working directory

* cache dependency path

* nvmrc

* cache-dependency-path: '**/yarn.lock'

* codql

* license

* nvmrc path

* revert nvmrc path change

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -20,6 +20,9 @@ on:
   schedule:
     - cron: "45 14 * * 6"
 
+# paths-ignore:
+#   - packages/wallet-native-sdk
+
 jobs:
   analyze:
     name: Analyze
