update example app

--- a/examples/native-sdk-ios-client/Podfile
+++ b/examples/native-sdk-ios-client/Podfile
@@ -1,8 +1,6 @@
-workspace 'Examples.xcworkspace'
-platform :ios, '12.0'
+platform :ios, '13.0'
 use_frameworks!
 
-target 'ClientApp' do
-  project 'ClientApp'
+target 'NativeWeb3App' do
   pod 'CoinbaseWalletSDK', path: '../../'
 end
