--- a/examples/native-sdk-ios-client/NativeWeb3App/Info.plist
+++ b/examples/native-sdk-ios-client/NativeWeb3App/Info.plist
@@ -2,6 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>xyz.myapp</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>myappxyz</string>
+			</array>
+		</dict>
+	</array>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>cbwallet</string>
