--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -43,6 +43,7 @@
   "private": true,
   "dependencies": {
     "@metamask/safe-event-emitter": "2.0.0",
+    "@solana/web3.js": "1.50.1",
     "bind-decorator": "^1.0.11",
     "bn.js": "^5.1.1",
     "buffer": "^6.0.3",
