--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -36,6 +36,7 @@
     "lint:types": "tsc --noEmit",
     "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
+    "lint": "yarn lint:eslint && yarn lint:types && yarn lint:prettier",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "prettier . --write",
     "release": "./scripts/release.sh"
