--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -1,8 +1,8 @@
-{
+{agag
   "extends": "./tsconfig",
   "compilerOptions": {
     "declaration": true,
-    "module": "commonjs",
+    "module": "commonjag,
     "moduleResolution": "node",
     "outDir": "./build/npm/dist",
     "target": "es2017"
