--- a/examples/web3modal-demo/package.json
+++ b/examples/web3modal-demo/package.json
@@ -24,8 +24,7 @@
     "web3modal": "^1.9.7"
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^5.0.1"
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
