--- a/examples/rainbowkit-demo/package.json
+++ b/examples/rainbowkit-demo/package.json
@@ -17,8 +17,7 @@
     "wagmi": "^0.9.6"
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^5.0.1"
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
