--- a/examples/web3-react-demo/package.json
+++ b/examples/web3-react-demo/package.json
@@ -20,8 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "react-app-rewired": "^2.2.1",
-    "react-scripts": "^5.0.1"
+    "react-app-rewired": "^2.2.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
