--- a/examples/wagmi-demo/package.json
+++ b/examples/wagmi-demo/package.json
@@ -9,16 +9,19 @@
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
     "@coinbase/wallet-sdk": "^3.2.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.6.8",
     "react": "^18.1.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
     "util": "^0.12.4",
     "wagmi": "^0.4.10"
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
+  },
+  "overrides": {
+    "react-scripts": {
+      "nth-check": "^2.0.1"
+    }
   },
   "scripts": {
     "start": "react-app-rewired start",
