--- a/examples/web3-onboard-demo/package.json
+++ b/examples/web3-onboard-demo/package.json
@@ -9,9 +9,6 @@
     "@chakra-ui/icons": "^2.0.2",
     "@chakra-ui/react": "^2.2.1",
     "@coinbase/wallet-sdk": "^3.2.0",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@walletconnect/web3-provider": "^1.7.8",
     "@web3-onboard/coinbase": "^2.0.3",
     "@web3-onboard/core": "^2.2.10",
@@ -20,12 +17,18 @@
     "assert": "^2.0.0",
     "ethers": "^5.6.8",
     "react": "^18.1.0",
-    "react-app-rewired": "^2.2.1",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
     "stream-browserify": "^3.0.0",
     "util": "^0.12.4",
     "web3modal": "^1.9.7"
+  },
+  "devDependencies": {
+    "react-app-rewired": "^2.2.1"
+  },
+  "overrides": {
+    "react-scripts": {
+      "nth-check": "^2.0.1"
+    }
   },
   "scripts": {
     "start": "react-app-rewired start",
