--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -23,19 +23,19 @@ jobs:
       run: |
         echo "skip=true" >> $GITHUB_ENV
         echo "::error:: Spam label found."
-    # - name: Check write permission
-    #   run: |
-    #     permission=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/$REPO/collaborators/$USER/permission | jq -r '.permission')
-    #     if [ "$permission" != "admin" ] && [ "$permission" != "write" ]; then
-    #       echo "::notice:: User $USER has $permission permission."
-    #       exit 0
-    #     fi
-    #     echo "skip=true" >> $GITHUB_ENV
-    #     echo "::error:: User $USER has $permission permission. No slack alert required."
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     REPO: ${{ github.repository }}
-    #     USER: ${{ github.actor }}
+    - name: Check write permission
+      run: |
+        permission=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/$REPO/collaborators/$USER/permission | jq -r '.permission')
+        if [ "$permission" != "admin" ] && [ "$permission" != "write" ]; then
+          echo "::notice:: User $USER has $permission permission."
+          exit 0
+        fi
+        echo "skip=true" >> $GITHUB_ENV
+        echo "::error:: User $USER has $permission permission. No slack alert required."
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO: ${{ github.repository }}
+        USER: ${{ github.actor }}
 
   parse-event-details:
     runs-on: ubuntu-latest
@@ -76,7 +76,7 @@ jobs:
 
     - name: Set channel and mention
       run: |
-        if [${{ contains(join(github.event.issue.labels.*.name), 'type:') }}]; then
+        if ${{ contains(join(github.event.issue.labels.*.name), 'type:') }}; then
           echo "channel=${{ env.CHANNEL_WALLET_FEEDBACK }}" >> $GITHUB_ENV
           echo "mention=!subteam^${{ env.ON_CALL_WALLET }}" >> $GITHUB_ENV
         else
