--- a/.github/workflows/notification.yml
+++ b/.github/workflows/notification.yml
@@ -1,17 +1,16 @@
 name: Slack notifications for PRs and Issues
 
 on:
-  push:
   pull_request:
     types: [opened, reopened]
   issues:
     types: [opened, reopened]
 
 env:
-  CHANNEL_WALLET_FEEDBACK: wallet-sdk # ${{ vars.CHANNEL_WALLET_FEEDBACK }}
-  CHANNEL_WALLET_SQUAD_BUILD: wallet-sdk # ${{ vars.CHANNEL_WALLET_SQUAD_BUILD }}
-  ON_CALL_WALLET: "" #${{ vars.ON_CALL_WALLET }}
-  ON_CALL_BUILD_SQUAD: "" # ${{ vars.ON_CALL_BUILD_SQUAD }}
+  CHANNEL_WALLET_FEEDBACK: ${{ vars.CHANNEL_WALLET_FEEDBACK }}
+  CHANNEL_WALLET_SQUAD_BUILD: ${{ vars.CHANNEL_WALLET_SQUAD_BUILD }}
+  ON_CALL_WALLET: ${{ vars.ON_CALL_WALLET }}
+  ON_CALL_BUILD_SQUAD: ${{ vars.ON_CALL_BUILD_SQUAD }}
 
 jobs:
   checks:
@@ -24,19 +23,19 @@ jobs:
       run: |
         echo "skip=true" >> $GITHUB_ENV
         echo "::error:: Spam label found."
-    # - name: Check write permission
-    #   run: |
-    #     permission=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/$REPO/collaborators/$USER/permission | jq -r '.permission')
-    #     if [ "$permission" != "admin" ] && [ "$permission" != "write" ]; then
-    #       echo "::notice:: User $USER has $permission permission."
-    #       exit 0
-    #     fi
-    #     echo "skip=true" >> $GITHUB_ENV
-    #     echo "::error:: User $USER has $permission permission. No slack alert required."
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #     REPO: ${{ github.repository }}
-    #     USER: ${{ github.actor }}
+    - name: Check write permission
+      run: |
+        permission=$(curl -s -H "Authorization: token $GITHUB_TOKEN" https://api.github.com/repos/$REPO/collaborators/$USER/permission | jq -r '.permission')
+        if [ "$permission" != "admin" ] && [ "$permission" != "write" ]; then
+          echo "::notice:: User $USER has $permission permission."
+          exit 0
+        fi
+        echo "skip=true" >> $GITHUB_ENV
+        echo "::error:: User $USER has $permission permission. No slack alert required."
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        REPO: ${{ github.repository }}
+        USER: ${{ github.actor }}
 
   parse-event-details:
     runs-on: ubuntu-latest
@@ -49,7 +48,7 @@ jobs:
       author: ${{ env.author }}
     steps:
     - name: Set pull request details
-      # if: ${{ github.event_name == 'pull_request' }}
+      if: ${{ github.event_name == 'pull_request' }}
       env:
         title: ${{ github.event.pull_request.title }}
       run: |
@@ -87,14 +86,13 @@ jobs:
 
     - name: Set text
       run: |
-        text=$(echo "${{ vars.SLACK_TEMPLATE }}")
+        text=$(cat .github/workflows/slack_template.txt)
         text=${text//'{{event}}'/${{ needs.parse-event-details.outputs.event }}}
         text=${text//'{{title}}'/${{ needs.parse-event-details.outputs.title }}}
         text=${text//'{{url}}'/${{ needs.parse-event-details.outputs.url }}}
         text=${text//'{{author}}'/${{ needs.parse-event-details.outputs.author }}}
         text=${text//'{{mention}}'/${{ env.mention }}}
         text=${text//'{{repo}}'/${{ github.repository }}}
-        text="${text//$'\r\n'/'\n'}"
         text="${text//$'\n'/'\n'}"
         echo "text=$text" >> $GITHUB_ENV
 
