--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,3 +1,5 @@
+cb codeql-analysis.yml
+
 # For most projects, this workflow file will not need changing; you simply need
 # to commit it to your repository.
 #
