--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
   "workspaces": [
     "packages/*"
   ],
+  "scripts": {
+    "lint": "eslint ./packages --ext .ts,.tsx"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.44.0",
+    "eslint-config-preact": "^1.3.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
