--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -34,9 +34,8 @@
     "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --exec 'yarn build:dev'",
     "build:prod": "yarn prebuild && yarn build && yarn build-npm && cp ./package.json ../../README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
     "lint:types": "tsc --noEmit",
-    "lint:prettier": "prettier --check \"{src,__tests__}/**/*.(js|ts|tsx)\"",
     "lint:eslint": "eslint ./src --ext .ts,.tsx",
-    "lint": "yarn lint:eslint && yarn lint:types && yarn lint:prettier",
+    "lint": "yarn lint:eslint && yarn lint:types",
     "fix:eslint": "yarn lint:eslint --fix",
     "fix:prettier": "prettier . --write",
     "release": "./scripts/release.sh"
