create top level base tsconfig

--- a/packages/wallet-sdk/package.json
+++ b/packages/wallet-sdk/package.json
@@ -26,15 +26,13 @@
     "pretest:unit": "node compile-assets.js",
     "test:unit": "jest",
     "test:unit:coverage": "yarn test:unit && open coverage/lcov-report/index.html",
-    "test:karma": "yarn build-npm && karma start",
+    "test:karma": "yarn build:npm && karma start",
     "prebuild": "rm -rf ./build && node -p \"'export const LIB_VERSION = \\'' + require('./package.json').version + '\\';'\" > src/version.ts",
     "build": "node compile-assets.js && webpack --config webpack.config.js",
-    "build-npm": "tsc -p ./tsconfig.build.json",
-    "build:dev": "export LINK_API_URL='http://localhost:3000'; yarn build",
-    "build:dev:watch": "nodemon -e 'ts,tsx,js,json,css,scss,svg' --ignore 'src/**/*-css.ts' --ignore 'src/**/*-svg.ts' --watch src/ --exec 'yarn build:dev'",
-    "build:prod": "yarn prebuild && yarn build && yarn build-npm && cp ./package.json ../../README.md ./LICENSE build/npm && cp -a src/vendor-js build/npm/dist && sed -i.bak 's|  \"private\": true,||g' build/npm/package.json && rm -f build/npm/package.json.bak",
+    "build:npm": "tsc -p ./tsconfig.build.json",
+    "build:prod": "yarn build && yarn build:npm && cp ./package.json ../../README.md ./LICENSE dist && cp -a src/vendor-js dist && sed -i.bak 's|  \"private\": true,||g' dist/package.json && rm -f dist/package.json.bak",
     "lint:types": "tsc --noEmit",
-    "lint": "yarn lint:eslint && yarn lint:types",
+    "lint": "yarn lint:types",
     "release": "./scripts/release.sh"
   },
   "private": true,
