--- a/packages/wallet-sdk/tsconfig.build.json
+++ b/packages/wallet-sdk/tsconfig.build.json
@@ -1,12 +1,14 @@
 {
-  "extends": "./tsconfig",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "declaration": true,
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "outDir": "./build/npm/dist",
-    "target": "es2017"
+    "outDir": "dist"
   },
-  "include": ["src", "src/@types"],
-  "exclude": ["**/*.test.*", "__tests__", "examples"]
+  "include": [
+    "src"
+  ],
+  "exclude": [
+    "dist",
+    "**/*.test.*",
+    "__tests__"
+  ]
 }
