--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   ],
   "scripts": {
     "lint": "yarn lint:eslint",
-    "lint:eslint": "eslint . --ext .ts,.tsx"
+    "lint:eslint": "eslint . --ext .ts,.tsx",
+    "typecheck": "yarn workspaces run typecheck"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -22,5 +23,6 @@
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "^3.0.0",
     "prettier": "^3.0.0"
-  }
+  },
+  "packageManager": "yarn@3.6.1"
 }
